--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -13,12 +13,10 @@
 </head>
 <body>
     <h1>Our Menu</h1>	
-    <div class="container-fluid">
     <div class="row">
-    <div>1</div>	
-    <div>2</div>
-    <div>3</div>
-    </div>	
-    </div>	
+    <div class="col-lg-3">1</div>	
+    <div class="col-lg-3">2</div>
+    <div class="col-lg-3">3</div>
+    </div>		
 </body>
 </html>
