--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -14,9 +14,9 @@
 <body>
     <h1>Our Menu</h1>	
     <div class="row">
-    <div class="col-lg-3">111</div>	
-    <div class="col-lg-3">222</div>
-    <div class="col-lg-3">333</div>
+    <div class="col-lg-3"><p>111</p></div>	
+    <div class="col-lg-3"><p>222</p></div>
+    <div class="col-lg-3"><p>333</p></div>
     </div>		
 </body>
 </html>
