--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="module2styles.css">
+<link rel="stylesheet" href="css/styles.css">
 <meta charset="utf-8">
 <meta name='viewport' content='width=device-width, initial-scale=1'>
 <title>Module 2 solution</title>
@@ -12,19 +12,19 @@
 	<div class='col-lg-4 col-md-6 sx-12'>
 		<div class='section'>
 			<span id='nr1'>Chicken</span>
-				<p>In publishing and graphic design, lorem ipsum (derived from Latin dolorem ipsum, translated as "pain itself") is a filler text commonly used to demonstrate the graphic elements of a document or visual presentation. Replacing meaningful content with placeholder text allows viewers to focus on graphic aspects such as font, typography, and page layout without being distracted by the content. <a href='https://en.wikipedia.org/wiki/Lorem_ipsum' target='blank' title='Source'>Source</a></p>
+				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
 		</div>
 	</div>
 	<div class='col-lg-4 col-md-6 sx-12'>
 		<div class='section'>
 			<span id='nr2'>Beef</span>
-				<p>In publishing and graphic design, lorem ipsum (derived from Latin dolorem ipsum, translated as "pain itself") is a filler text commonly used to demonstrate the graphic elements of a document or visual presentation. Replacing meaningful content with placeholder text allows viewers to focus on graphic aspects such as font, typography, and page layout without being distracted by the content. <a href='https://en.wikipedia.org/wiki/Lorem_ipsum' target='blank' title='Source'>Source</a></p>
+				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
 		</div>
 	</div>
 	<div class='col-lg-4 col-md-12 sx-12'>
 		<div class='section'>
 			<span id='nr3'>Sushi</span>
-				<p>In publishing and graphic design, lorem ipsum (derived from Latin dolorem ipsum, translated as "pain itself") is a filler text commonly used to demonstrate the graphic elements of a document or visual presentation. Replacing meaningful content with placeholder text allows viewers to focus on graphic aspects such as font, typography, and page layout without being distracted by the content. <a href='https://en.wikipedia.org/wiki/Lorem_ipsum' target='blank' title='Source'>Source</a></p>
+				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
 		</div>
 	</div>
 </div>
