--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="css/styles.css">
 <meta charset="utf-8">
 <meta name='viewport' content='width=device-width, initial-scale=1'>
 <title>Module 2 solution</title>
+<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 <h1>Our Menu</h1>
 <div class='row'>
 	<div class='col-lg-4 col-md-6 sx-12'>
 		<div class='section'>
-			<span id='nr1'>Chicken</span>
+			<span id='num1'>Chicken</span>
 				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
 		</div>
 	</div>
 	<div class='col-lg-4 col-md-6 sx-12'>
 		<div class='section'>
-			<span id='nr2'>Beef</span>
+			<span id='num2'>Beef</span>
 				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
 		</div>
 	</div>
 	<div class='col-lg-4 col-md-12 sx-12'>
 		<div class='section'>
-			<span id='nr3'>Sushi</span>
+			<span id='num3'>Sushi</span>
 				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
 		</div>
 	</div>
