--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -5,7 +5,7 @@
 <meta name='viewport' content='width=device-width, initial-scale=1'>
 <title>Module 2 solution</title>
 <link rel="stylesheet" href="css/style.css">
-<link rel="stylesheet" href="css/bootstrap.min.css">	
+<link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
 <body>
 
@@ -62,5 +62,7 @@
 		</div>
 	</div>
 </div>
+
+<script src="js/bootstrap.min.js"></script>
 </body>
 </html>
