--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -11,32 +11,33 @@
 
 <header>
     <nav id="header-nav" class="navbar navbar-default">
-      <div class="container">
-        <div class="navbar-header"> 
-          <a class="navbar-brand" href="#">Food, LLC</a>
+        <div class="container">
+            <div class="navbar-header">
+                <div class="navbar-brand">
+                    <a href="index.html"><h1>Food, LLC</h1></a>
+                </div>
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+            </div>
 
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-        </div>
-        
-        <div id="collapsable-nav" class="collapse navbar-collapse">
-           <ul id="nav-list" class="nav navbar-nav navbar-right">
-            <li>
-              <a href="#chicken">Chicken</a>
-            </li>
-            <li>
-              <a href="#beef">Beef</a>
-            </li>
-            <li>
-              <a href="#sushi">Sushi</a>
-            </li>            
-          </ul><!-- #nav-list -->
-        </div><!-- .collapse .navbar-collapse -->
-      </div><!-- .container -->
+            <div id="collapsable-nav" class="collapse navbar-collapse">
+                <ul id="nav-list" class="nav navbar-nav navbar-right visible-xs">
+                    <li>
+                        <p class="text-center"> Chicken </p>
+                    </li>
+                    <li>
+                        <p class="text-center"> Beef </p>
+                    </li>
+                    <li>
+                        <p class="text-center"> Sushi </p>
+                    </li>
+                </ul><!-- #nav-list -->
+            </div><!-- .collapse .navbar-collapse -->
+        </div><!-- .container -->
     </nav><!-- #header-nav -->
 </header>
 
